--- a/MediatR&CQRS/MediatR&CQRS/MediatR&CQRS/MediatRCQRS.Webapi.csproj
+++ b/MediatR&CQRS/MediatR&CQRS/MediatR&CQRS/MediatRCQRS.Webapi.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="11.1.0" />
-    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+    <ProjectReference Include="..\MediatRCQRS.Webapi.Application\MediatRCQRS.Webapi.Application.csproj" />
+    <ProjectReference Include="..\MediatRCQRS.Webapi.Core\MediatRCQRS.Webapi.Core.csproj" />
   </ItemGroup>
 
 </Project>
