--- a/MediatR&CQRS/MediatR&CQRS/MediatR&CQRS/Properties/launchSettings.json
+++ b/MediatR&CQRS/MediatR&CQRS/MediatR&CQRS/Properties/launchSettings.json
@@ -1,23 +1,14 @@
-﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:45875",
-      "sslPort": 44344
-    }
-  },
+{
   "profiles": {
     "MediatR.Webapi": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "home",
-      "applicationUrl": "https://localhost:7134;http://localhost:5213",
+      "launchUrl": "queries",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7134;http://localhost:5213"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -26,6 +17,15 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    }
+  },
+  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:45875",
+      "sslPort": 44344
     }
   }
 }
