保留原有的CustomerController，使用CQRS 分别查询QueriesController 和命令CommandsController。

--- a/MediatRCQRS/MediatRCQRS/MediatRCQRS.Webapi.csproj
+++ b/MediatRCQRS/MediatRCQRS/MediatRCQRS.Webapi.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MediatRCQRS.Webapi.Application\MediatRCQRS.Webapi.Application.csproj" />
     <ProjectReference Include="..\MediatRCQRS.Webapi.Core\MediatRCQRS.Webapi.Core.csproj" />
+    <ProjectReference Include="..\MediatRCQRS.Webapi.newApp\MediatRCQRS.Webapi.newApp.csproj" />
   </ItemGroup>
 
 </Project>
