--- a/MediatRCQRS/MediatRCQRS.Webapi.Core/MediatRCQRS.Webapi.Core.csproj
+++ b/MediatRCQRS/MediatRCQRS.Webapi.Core/MediatRCQRS.Webapi.Core.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MediatRCQRS.Webapi.Application\MediatRCQRS.Webapi.Application.csproj" />
+    <ProjectReference Include="..\MediatRCQRS.Webapi.newApp\MediatRCQRS.Webapi.newApp.csproj" />
   </ItemGroup>
 
 </Project>
