新增pipeline 功能，pre 和 post handler 注入失败，原因未知。

--- a/MediatRCQRS/MediatRCQRS.Webapi.Core/MediatRCQRS.Webapi.Core.csproj
+++ b/MediatRCQRS/MediatRCQRS.Webapi.Core/MediatRCQRS.Webapi.Core.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MediatRCQRS.Webapi.Application\MediatRCQRS.Webapi.Application.csproj" />
     <ProjectReference Include="..\MediatRCQRS.Webapi.newApp\MediatRCQRS.Webapi.newApp.csproj" />
+    <ProjectReference Include="..\MediatRCQRS.Webapi.Pipeline\MediatRCQRS.Webapi.Pipeline.csproj" />
   </ItemGroup>
 
 </Project>
